# philosophers

./: CMakeLists.txt  Makefile  README.md  tasks.todo
gtest/: ft_atoi.cpp  main.cpp
include/: data.h  ft_atoi.h  input.h  philo.h
src/: ft_atoi.c  main.c  monitor_philos.c  mutex_access.c  mutex_functions.c  mutex_gates.c  p_eat.c  philo_loop.c  print_messages.c  pthread_functions.c  time_functions.c
src/input/: a.out  ft_atoi.c  ft_sfatoi.c  get_parameters.c
test_stuff/philo/: Makefile  ft_sfatoi.c  get_parameters.c  input.h  isnum_str.c  monitor_philos.c  mutex_gates.c  p_eat.c  philo  philo.h  philo_loop.c  print_messages.c  pthread_functions.c  time_functions.c
testing/: CMakeLists.txt  ft_atoi.cpp  main.cpp
tests/: CMakeLists.txt  cli.cpp  cli_bonus.cpp  cli_tests.cpp  ft_atoi.cpp  ft_sfatoi.cpp  get_parameters.cpp  isnum_str.cpp  main.cpp  time_functions
